# TodoApp-Kafka-Docker

./: compose.yaml
microservice1/: Dockerfile  pyproject.toml
microservice1/.devcontainer/: devcontainer.json
microservice1/todo/: main.py  todo.proto  todo_pb2.py
microservice1/todo/utils/: curd.py  models.py  settings.py
microservice2/: Dockerfile  pyproject.toml
microservice2/.devcontainer/: devcontainer.json
microservice2/recommendation_engine/: main.py  settings.py  todo_pb2.py
