[tool.poetry]
name = "recommendation-engine"
version = "0.1.0"
description = ""
authors = ["Syed Kamil Zafar <kamilzafar54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiokafka = "^0.10.0"
openai = "^1.30.1"
protobuf = "^5.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
